src/test/ui/imports/extern-crate-used.stderr
error: unused extern crate
  --> $DIR/extern-crate-used.rs:18:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^ If I were you, I would simply remove it
   |
note: lint level defined here
  --> $DIR/extern-crate-used.rs:6:9
   |
LL | #![deny(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

